--- a/legv8_asm/Cargo.toml
+++ b/legv8_asm/Cargo.toml
@@ -3,7 +3,12 @@ name = "legv8_asm"
 version = "0.1.0"
 authors = ["Tim <timothyhollabaugh@gmail.com>"]
 
+[lib]
+path="src/lib.rs"
+crate-type = ["cdylib"]
+
 [dependencies.nom]
-version = "^3.2"
+#path = "../nom"
+version = "4.0.0-beta2"
 features = ["verbose-errors"]
 
